--- a/build.gradle
+++ b/build.gradle
@@ -15,18 +15,19 @@ repositories {
 }
 
 dependencies {
-  compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.5.RELEASE'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.5.RELEASE'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.5.RELEASE'
+  runtime group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.5.RELEASE'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.5.RELEASE'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.5.RELEASE'
 
-  compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.0.1'
+  implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.0.1'
+  testImplementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter-test', version: '2.0.1'
 
   implementation 'org.springframework.boot:spring-boot-starter'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-  compileOnly 'org.projectlombok:lombok:1.18.8'
-  annotationProcessor 'org.projectlombok:lombok:1.18.8'
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 
 }
 
@@ -40,6 +41,8 @@ task migrateTest(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
   url = 'jdbc:mysql://localhost:43306/salonservice'
   user = 'root'
   password = 'password'
+  //driver = 'com.mysql.cj.jdbc.Driver'
+
 }
 
 
