ログインまでできるようにした

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,5 +4,10 @@ spring:
     url: "jdbc:mysql://localhost:43306/salonservice"
     username: root
     password: password
-
-
+logging:
+  level:
+    org:
+      springframework: WARN
+    com:
+      github:
+        tamurashingo: DEBUG
