--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
   implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.0.1'
   testImplementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter-test', version: '2.0.1'
+  
+  implementation group: 'org.mybatis', name: 'mybatis-typehandlers-jsr310', version: '1.0.2'
 
   implementation 'org.springframework.boot:spring-boot-starter'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
