add register user

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 
 }
 
+bootRun {
+  jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
+}
+
 flyway {
   url = 'jdbc:mysql://localhost:3306/salonservice'
   user = 'root'
