--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
   mavenCentral()
 }
 
+dependencyManagement {
+  imports {
+    mavenBom "org.junit:junit-bom:5.4.2"
+  }
+}
+
 dependencies {
   runtime group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.5.RELEASE'
@@ -21,17 +27,27 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.5.RELEASE'
   implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
 
-  implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.0.1'
-  testImplementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter-test', version: '2.0.1'
+  implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.0'
+  testImplementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter-test', version: '2.1.0'
   
   implementation group: 'org.mybatis', name: 'mybatis-typehandlers-jsr310', version: '1.0.2'
 
   implementation 'org.springframework.boot:spring-boot-starter'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'junit', module: 'junit'
+  }
+  testImplementation 'org.junit.jupiter:junit-jupiter'
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+  testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+  testCompileOnly 'junit:junit'
 
   compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 
+}
+
+test {
+  useJUnitPlatform()
 }
 
 bootRun {
